syntax = "proto3";
package realionetwork.asset.v1;

option go_package = "github.com/realiotech/realio-network/x/asset/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";
import "realionetwork/asset/v1/token.proto";

// Msg defines the Msg service.
service Msg {
  rpc CreateToken(MsgCreateToken) returns (MsgCreateTokenResponse);
  rpc UpdateToken(MsgUpdateToken) returns (MsgUpdateTokenResponse);
  rpc AllocateToken(MsgAllocateToken) returns (MsgAllocateTokenResponse);
  rpc AssignPrivilege(MsgAssignPrivilege) returns (MsgAssignPrivilegeResponse);
  rpc UnassignPrivilege(MsgUnassignPrivilege)
      returns (MsgUnassignPrivilegeResponse);
  rpc DisablePrivilege(MsgDisablePrivilege)
      returns (MsgDisablePrivilegeResponse);
  rpc ExecutePrivilege(MsgExecutePrivilege)
      returns (MsgExecutePrivilegeResponse);
}

message MsgCreateToken {
  string creator = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string manager = 2 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string name = 3;
  string symbol = 4;
  uint32 decimal = 5;
  string description = 6;
  repeated string excluded_privileges = 7;
  bool add_new_privilege = 8;
  repeated string enabled_privileges = 9;
}

message MsgCreateTokenResponse {}

message MsgUpdateToken {
  string manager = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string token_id = 2;
  string name = 3;
  string symbol = 4;
  string description = 5;
  bool add_new_privilege = 6;
}

message MsgUpdateTokenResponse {}

message MsgAllocateToken {
  string manager = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string token_id = 2;
  repeated Balance balances = 3
      [ (gogoproto.nullable) = false ];
}

message MsgAllocateTokenResponse {}

message MsgAssignPrivilege {
  string manager = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string token_id = 2;
  repeated string assigned_to = 3
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string privilege = 4;
}

message MsgAssignPrivilegeResponse {}

message MsgUnassignPrivilege {
  string manager = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string token_id = 2;
  repeated string unassigned_from = 3
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string privilege = 4;
}

message MsgUnassignPrivilegeResponse {}

message MsgDisablePrivilege {
  string manager = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string token_id = 2;
  string disabled_privilege = 3;
}

message MsgDisablePrivilegeResponse {}

message MsgExecutePrivilege {
  string address = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string token_id = 2;
  google.protobuf.Any privilege_msg = 3 [(cosmos_proto.accepts_interface) = "realionetwork.asset.v1.PrivilegeI"];;
}

message MsgExecutePrivilegeResponse {}